# Rust-And-WGPU-Study

./: Cargo.toml  README.md
src/: main.rs
src/study1/: mod.rs
src/study2/: mod.rs  shader.wgsl
src/study3/: mod.rs  shader.wgsl
src/study4/: mod.rs  shader.wgsl
src/study5/: common.rs  mod.rs  shader.wgsl
src/study6/: mod.rs  shader.wgsl  vertex_data.rs
src/study7/: mod.rs  shader.wgsl  transform.rs
src/study8/: common.rs  mod.rs  shader.wgsl
src/study9/: common.rs  mod.rs  shader.wgsl
src/study_appendix/: common.rs  data.rs  mod.rs  shader.wgsl
