[package]
name = "wgpu1"
version = "0.1.0"
edition = "2021"
authors = ["Dolto"]
resolver = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17.1"     #wgpu 라이브러리
cgmath = "0.18"     #선형대수학과 같은 컴퓨터 그래픽 관련 라이브러리
env_logger = "0.10"
futures = "0.3.28"
gfx-hal = "0.9"
image = "0.24.7"    #이미지 형태에 대한 기본 필터와 디코더를 제공 (텍스쳐 매핑 생성에 사용)
log = "0.4.20"
pollster = "0.3.0"  #비동기 처리에 문제가 생기는걸 처리하는?
winit = "0.28.7"    #크로스 플랫폼 윈도우 창 생성 라이브러리
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0.75"
rand ="0.8.5"